macgyver works for random file

--- a/macgyver.html
+++ b/macgyver.html
@@ -23,12 +23,13 @@
     }
 
     var payload = JSON.stringify({
-            key: "free",
-            id: "6t7s5d7t",
-            data: {
-        "audio_file": "https://askmacgyver.com/test/Maroon-128.mp3"
-    }
-    });
+              key: "free",
+              id: "6t7s5d7t",
+              data: {
+          "audio_file": "https://www.soundhelix.com/examples/mp3/SoundHelix-Song-1.mp3"
+          // "audio_file": "https://askmacgyver.com/test/Maroon-128.mp3"
+      }
+      });
 
     xhr.send(payload);
 
